A9/gateways.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "CYBERSECURITY_IGW"
  }
}
